testsuite/tests/printer/Ppr031.stderr

Ppr031.hs:2:9: error:
    Not in scope: type constructor or class ‘Spec’

Ppr031.hs:17:9: error: Not in scope: data constructor ‘Status’

Ppr031.hs:17:17: error:
    Not in scope: ‘pos’
    Perhaps you meant ‘cos’ (imported from Prelude)

Ppr031.hs:17:22: error:
    Not in scope: ‘flips’
    Perhaps you meant ‘flip’ (imported from Prelude)

Ppr031.hs:17:29: error: Not in scope: ‘captureAt’

Ppr031.hs:17:40: error: Not in scope: ‘captureLen’

Ppr031.hs:20:5: error: Not in scope: data constructor ‘POr’

Ppr031.hs:20:72: error:
    Not in scope: ‘flips’
    Perhaps you meant ‘flip’ (imported from Prelude)

Ppr031.ppr.hs:2:9: error:
    Not in scope: type constructor or class ‘Spec’

Ppr031.ppr.hs:13:9: error: Not in scope: data constructor ‘Status’

Ppr031.ppr.hs:13:17: error:
    Not in scope: ‘pos’
    Perhaps you meant ‘cos’ (imported from Prelude)

Ppr031.ppr.hs:13:22: error:
    Not in scope: ‘flips’
    Perhaps you meant ‘flip’ (imported from Prelude)

Ppr031.ppr.hs:13:29: error: Not in scope: ‘captureAt’

Ppr031.ppr.hs:13:40: error: Not in scope: ‘captureLen’

Ppr031.ppr.hs:18:11: error: Not in scope: data constructor ‘POr’

Ppr031.ppr.hs:20:64: error:
    Not in scope: ‘flips’
    Perhaps you meant ‘flip’ (imported from Prelude)
